--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body
 {
-	color: LightGreen;
+	color: white;
 	background-color: black;
 }
 
@@ -32,5 +32,5 @@ span#clock_date
 
 span#clock_time
 {
-	font-size: 2em;
+	font-size: 1.9em;
 }
