--- a/style.css
+++ b/style.css
@@ -19,18 +19,18 @@ span
 {
 	display: block;
 	float: right;
-	width: 85%;
+	/*width: 85%;*/
 	font-family: 'Archivo Black';
 }
 
 span#clock_date
 {
 	text-align: right;
-	font-size: 0.5em;
+	font-size:1.0em;
 	padding-right: 0.5em;
 }
 
 span#clock_time
 {
-	font-size: 1.9em;
+	font-size: 2.0em;
 }
